--- a/desktop/src/main.css
+++ b/desktop/src/main.css
@@ -6,3 +6,14 @@
     background-color: #131316;
   }
 }
+
+@layer utilities {
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
